--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -1,3 +1,17 @@
+@inproceedings{DiceSS2006,
+  author    = {David Dice and
+               Ori Shalev and
+               Nir Shavit},
+  title     = {Transactional Locking II},
+  booktitle = {DISC},
+  year      = {2006},
+  pages     = {194-208},
+  ee        = {http://dx.doi.org/10.1007/11864219_14},
+  crossref  = {DBLP:conf/wdag/2006},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
 @inproceedings{Gueta2011,
   author    = {Guy Golan-Gueta and
                Nathan Grasso Bronson and
@@ -13,3 +27,4 @@
   crossref  = {DBLP:conf/oopsla/2011},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
