--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -11,6 +11,17 @@
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
+@inproceedings{GuerraouiK2008,
+  author    = {Rachid Guerraoui and
+               Michal Kapalka},
+  title     = {On the correctness of transactional memory},
+  booktitle = {PPOPP},
+  year      = {2008},
+  pages     = {175-184},
+  ee        = {http://doi.acm.org/10.1145/1345206.1345233},
+  crossref  = {DBLP:conf/ppopp/2008},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
 
 @inproceedings{Gueta2011,
   author    = {Guy Golan-Gueta and
@@ -28,3 +39,13 @@
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
+@InProceedings{LevAriCK2014,
+
+  author = 	 {Kfir Lev-Ari and
+			  Gregory Chockler and 
+			  Idit Keidar},
+  title = 	 {On Correctness of Data Structures under Reads-Write Concurrency},  
+  booktitle = {DISC},
+  year = 	 {2014},
+  month = 	 {October},
+}
