--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -1,7 +1,7 @@
 %%This is a very basic article template.
 %%There is just one section and two subsections.
 
-\title{Automatic Specialized Synchronization for Dynamic Data Structures}
+\title{Automatic Optimistic Synchronization for Dynamic Data Structures}
 \documentclass{article}
 \usepackage{xspace}
 
@@ -125,30 +125,15 @@ shared variables without locks and start using the
 locking protocol only when the operation reaches a store step.
 In practice our algorithm shows that there is no need to 
 acquire locks if they are freed before any change is made.    
-In order to implement such synchronization scheme, 
-we divide the operation to three \emph{phases}:
-\begin{description}
-  \item[Read Phase] Stats at the beginning of the operation and
-  ends at any point before the first store operation. 
-  During this phase the operation maintains a \readSet, containing references to
-  objects loaded and any other information needed to later ensure that the read saw 
-  a consistent snapshot of the data. 
-  
-  \item[Validation Phase] This phase connects the read phase
-  with the read-write phase. It has two requirements: (i) lock 
-  local variables of the operation and (ii) ensure that the 
-  values read during the read phase are consistent, i.e.
-  as if the values were read while executing the locking 
-  protocol. To avoid deadlocks, the locks are acquired using 
-  a \code{try\_lock} operation, if the \code{try\_lock} fails, 
-  the operation restarts from the beginning. Next, the \readSet 
-  is validated, if the validation fails the operation restarts from the
-  beginning.
-  
-  \item[Read-Write Phase] This phase enforces the locking protocol. 
-  Once the read-write phase begins, the operation is guaranteed to to 
-  finish without restarts.  
-\end{description}
+%In order to implement such synchronization scheme, 
+%we divide the operation to three \emph{phases}:
+
+This optimistic scheme separates the operation to three
+\emph{phases}, an optimistic \emph{read phase},
+a pessimistic \emph{read-write phase} and a 
+\emph{validation phase} that connect them. 
+
+
 
 \subsection{Requirements on The Locking Protocol}
 In order for our algorithm to work, the initial locking
@@ -166,71 +151,60 @@ does not allow early lock release (no locks can be acquired after a
 lock was released), also, it does not require acquiring all locks
 before the first store operation. However, a stricter version 
 of 2PL locking that requires \reqII can be used to achieve optimism. 
-The resulting optimistic protocol would be very similar to 
+The resulting optimistic protocol would be similar to 
 \emph{Transactional Locking 2}\cite{DiceSS2006}.   
 
-\subsection{Global Version Algorithm}
-The module maintains a counter denoted \emph{global version}.
-In high level, the global version is used to identify 
-the order of write operations and freshness of objects.   
 
-In the beginning of the read phase, the operation atomically
-reads the global counter and saves the returned value in 
-a \readV variable. After each load step, the
-operation checks that the version field of the object read
-is not larger than the value of \readV. If the checks fails,
-the operation restarts from the beginning 
-(with a new \readV value). Since the version of the object 
-is not changed atomically with the write to the object, 
-the object is also checked to be unlocked. 
-In this implementation the \readSet contains only 
-references to all objects read by the operation.
- 
-The validation phase have an 
-additional  requirement, to acquire a unique \writeV. 
-To ensure that versions of objects are not decremented, 
-acquiring the \writeV needs to be done atomically with 
-the validation of the \readSet. One possibility is holding a
-lock on the global version during the validation, 
-an optimistic approach is to read the global version 
-before validation and incrementing it using a CAS 
-operation after the validation. In the \readSet validation 
-each object's version is compared with the \readV, 
-and is checked to be unlocked. 
-%TODO why we check the lock 
-%(example of an operation higher in the tree). 
 
-The only addition to the read-write phase is writing the 
-operation's \writeV to every object that is locked. 
-
-%TODO - is the use of validation phase and read set validation
-%       confusing??? 
-
-\subsection{Local Version Algorithm} 
+\subsection{Detailed Algorithm}
 Each objects maintains a counter, incremented every time the 
-object is locked. During the read phase, the \readSet maintains
-both object reference and the local version when it was read.
-The local versions are incremented during the read-write phase,
-when the object is locked. Incrementing the version is not atomic 
-with the lock, thus, the object is also checked to be unlocked. 
-The read phase does not validate reads, in order to avoid infinite
-loops, a timeout is set. If the operation reaches the timeout, 
-a \readSet validation takes place, if it fails the operation
-restarts from the beginning. 
+object is locked. This counter is used to validate the correctness
+of the optimistic read phase. 
+
+\begin{description}
+  \item[Read Phase] Stats at the beginning of the operation and
+  ends at any point before the first store operation. 
+  During this phase the operation maintains a \readSet, 
+  containing references to objects loaded and the local 
+  version when it was read. The local versions are incremented 
+  during the read-write phase, when the object is locked. 
+  Incrementing the version is not atomic with the lock, thus, 
+  the object is also checked to be unlocked. 
+  The read phase does not validate reads, 
+  in order to avoid infinite loops, a timeout is set. 
+  If the operation reaches the timeout, 
+  a \readSet validation takes place, if it fails 
+  the operation restarts from the beginning.
+  A pseudo code of the transformation can be found in \ref{}. 
+  
+  \item[Validation Phase] This phase connects the read phase
+  with the read-write phase. It has two requirements: (i) lock 
+  local variables of the operation and (ii) ensure that the 
+  values read during the read phase are consistent, i.e.
+  as if the values were read while executing the locking 
+  protocol. To avoid deadlocks, the locks are acquired using 
+  a \code{try\_lock} operation, if the \code{try\_lock} fails, 
+  the operation restarts from the beginning. Next, the \readSet 
+  is validated, if the validation fails the operation restarts from the
+  beginning. During the \readSet validation, each reference saved 
+  in the \readSet is checked to be unlocked and that the current 
+  version matches the version saved in the \readSet. 
+  A pseudo code of the \readSet validation can be found in \ref{}. 
+  
+  \item[Read-Write Phase] This phase enforces the locking protocol
+  while maintaining the local versions, i.e., the local version of 
+  an object is incremented every time it is locked.  
+  Once the read-write phase begins, the operation is guaranteed to to 
+  finish without restarts.  
+\end{description}
 
 The use of timeout does not guarantee
 \emph{opacity}~\cite{GuerraouiK2008} or 
 \emph{validity}\cite{LevAriCK2014}. 
 
-
-
-The \readSet validation first checks that the node is unlocked,
-(or locked by the current operation), then it checks that the 
-current version is equal to the version saved in the \readSet. 
-
-During the read-write phase, the operation increment the local 
-version of every node that it locks. 
-%TODO can we do this during a store?? 
+%The \readSet validation first checks that the node is unlocked,
+%(or locked by the current operation), then it checks that the 
+%current version is equal to the version saved in the \readSet. 
  
 \section{Algorithm's Correctness} 
 We will prove that if the original locking protocol is 
@@ -248,7 +222,7 @@ order of execution of the first step of a successful \readSet
 validation. (If some operation does not have such point we omit it).
 Let $\pi_{LP} = \pi_{lp1},\pi_{1},\ldots,\pi_{lpi},\pi_{i}$ where 
 $\pi_{lpi}$ is a $p_i$-only execution of original locking protocol 
-from until $p_i$ holds locks only on the local variable locked
+until $p_i$ holds locks only on the local variable locked
 in the validation phase of $p_i \in \pi$, and $\pi_i$ is
 the interval of $\pi$ starting from the return from the validation of
 $pi$ until the first step of the successful \readSet validation of 
@@ -280,11 +254,9 @@ Otherwise, $p_j$ locked $v$ after $p_k$ read $v$.
 If $v$ is still locked during the validation of $p_k$ then 
 the validation will fail, contradiction. Alternatively, $v$ 
 was unlocked by $p_j$ before $p_k$ validated $v$, 
-its version incremented, either to a version bigger 
-than the local version read by $p_k$ (in local version mode), 
-or to a version larger than $p_k$'s \readV 
-(in global version mode), contradicting the successful 
-validation of $p_k$.  
+its version incremented to a version bigger 
+than the local version read by $p_k$, 
+contradicting the successful validation of $p_k$.  
 \end{proof}
 
 \begin{lemma}
@@ -301,14 +273,6 @@ the original locking of $p_k$ after $\pi' =
 \pi_{lp1},\pi_{1},\ldots,\pi_{lpk-1},\pi_{k-1}$ is conflict-equivalent
 to the original read phase. The read-write phase remains unchanged, 
 maintaining conflict-equivalence to $\pi$.
-\end{proof}
-
-\begin{lemma}
-In the global version algorithm, \readSet validation is not required
-for read-only operations. 
-\end{lemma}
-\begin{proof}
-different construction\ldots
 \end{proof}
 
 
