--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -1,3 +1,19 @@
+@inproceedings{AragonS1989,
+  author    = {Cecilia R. Aragon and
+               Raimund Seidel},
+  title     = {Randomized Search Trees},
+  booktitle = {30th Annual Symposium on Foundations of Computer Science, Research
+               Triangle Park, North Carolina, USA, 30 October - 1 November 1989},
+  year      = {1989},
+  pages     = {540--545},
+  crossref  = {DBLP:conf/focs/FOCS30},
+  url       = {http://doi.ieeecomputersociety.org/10.1109/SFCS.1989.63531},
+  doi       = {10.1109/SFCS.1989.63531},
+  timestamp = {Wed, 03 Sep 2014 11:25:58 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/focs/AragonS89},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @inproceedings{DiceSS2006,
   author    = {David Dice and
                Ori Shalev and
@@ -23,6 +39,25 @@
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
+@inproceedings{BronsonCCO2010,
+  author    = {Nathan Grasso Bronson and
+               Jared Casper and
+               Hassan Chafi and
+               Kunle Olukotun},
+  title     = {A practical concurrent binary search tree.},
+  booktitle = {Proceedings of the 15th {ACM} {SIGPLAN} Symposium on Principles and
+               Practice of Parallel Programming, {PPOPP} 2010, Bangalore, India,
+               January 9-14, 2010},
+  year      = {2010},
+  pages     = {257--268},
+  crossref  = {DBLP:conf/ppopp/2010},
+  url       = {http://doi.acm.org/10.1145/1693453.1693488},
+  doi       = {10.1145/1693453.1693488},
+  timestamp = {Wed, 03 Sep 2014 09:37:52 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ppopp/BronsonCCO10},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @inproceedings{Gueta2011,
   author    = {Guy Golan-Gueta and
                Nathan Grasso Bronson and
@@ -37,6 +72,23 @@
   ee        = {http://doi.acm.org/10.1145/2048066.2048086},
   crossref  = {DBLP:conf/oopsla/2011},
   bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{DrachslerVY2014,
+  author    = {Dana Drachsler and
+               Martin T. Vechev and
+               Eran Yahav},
+  title     = {Practical concurrent binary search trees via logical ordering.},
+  booktitle = {{ACM} {SIGPLAN} Symposium on Principles and Practice of Parallel Programming,
+               PPoPP '14, Orlando, FL, USA, February 15-19, 2014},
+  year      = {2014},
+  pages     = {343--356},
+  crossref  = {DBLP:conf/ppopp/2014},
+  url       = {http://doi.acm.org/10.1145/2555243.2555269},
+  doi       = {10.1145/2555243.2555269},
+  timestamp = {Wed, 03 Sep 2014 09:36:52 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ppopp/DrachslerVY14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @InProceedings{LevAriCK2014,
