--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -1,8 +1,37 @@
-%%This is a very basic article template.
-%%There is just one section and two subsections.
+%-----------------------------------------------------------------------------
+%
+%               Template for sigplanconf LaTeX Class
+%
+% Name:         sigplanconf-template.tex
+%
+% Purpose:      A template for sigplanconf.cls, which is a LaTeX 2e class
+%               file for SIGPLAN conference proceedings.
+%
+% Guide:        Refer to "Author's Guide to the ACM SIGPLAN Class,"
+%               sigplanconf-guide.pdf
+%
+% Author:       Paul C. Anagnostopoulos
+%               Windfall Software
+%               978 371-2316
+%               paul@windfall.com
+%
+% Created:      15 February 2005
+%
+%-----------------------------------------------------------------------------
 
-\title{Scalable Automatic Synchronization Combining Optimism with Pessimism}
-\documentclass{article}
+
+\documentclass[preprint,11pt]{sigplanconf}
+
+% The following \documentclass options may be useful:
+
+% preprint      Remove this option only once the paper is in final form.
+% 10pt          To set in 10-point type instead of 9-point.
+% 11pt          To set in 11-point type instead of 9-point.
+% authoryear    To obtain author/year citation style instead of numeric.
+
+\usepackage{amsmath}
+
+
 \usepackage{xspace}
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
@@ -11,10 +40,42 @@
 
 \input{macros}
 
+
 \begin{document}
+
+\special{papersize=8.5in,11in}
+\setlength{\pdfpageheight}{\paperheight}
+\setlength{\pdfpagewidth}{\paperwidth}
+
+\conferenceinfo{CONF 'yy}{Month d--d, 20yy, City, ST, Country} 
+\copyrightyear{20yy} 
+\copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
+\doi{nnnnnnn.nnnnnnn}
+
+% Uncomment one of the following two, if you are not going for the 
+% traditional copyright transfer agreement.
+
+%\exclusivelicense                % ACM gets exclusive license to publish, 
+                                  % you retain copyright
+
+%\permissiontopublish             % ACM gets nonexclusive license to publish
+                                  % (paid open-access papers, 
+                                  % short abstracts)
+
+\titlebanner{banner above paper title}        % These are ignored unless
+\preprintfooter{short description of paper}   % 'preprint' option specified.
+
+\title{Scalable Automatic Synchronization for Concurrent Data Structures}
+%\subtitle{Subtitle Text, if any}
+
+\authorinfo{}
+           {}
+           {}
+
 \maketitle
 
-\abstract{We present an \emph{automatic} approach for 
+\begin{abstract}
+We present an \emph{automatic} approach for 
 parallelizing sequential data structures in a way that 
 is both safe and scalable. While there exist pessimistic 
 transformations that make code thread-safe by adding 
@@ -35,14 +96,57 @@ custom-tailored concurrent data structures.
 Our work thus shows the promise that automated approaches 
 bear for overcoming the difficulty involved in manually 
 hand crafting concurrent data structures. 
-}
+\end{abstract}
+
+\category{CR-number}{subcategory}{third-level}
+
+% general terms are not compulsory anymore, 
+% you may leave them out
+\terms
+term1, term2
+
+\keywords
+keyword1, keyword2
+
 \input{introduction}
 \input{preliminaries}
 \input{algorithm}
 \input{proof}
 \input{evaluation}
 \input{related}
- 
+
+\appendix
+\section{Appendix Title}
+
+This is the text of the appendix, if you need one.
+
+\acks
+
+Acknowledgments, if needed.
+
+% We recommend abbrvnat bibliography style.
+
+\bibliographystyle{abbrvnat}
+
+% The bibliography should be embedded for final submission.
+
 \bibliography{myRef}
 \bibliographystyle{plain}
+
+%Maya:  Commented out template bib
+%\begin{thebibliography}{}
+%\softraggedright
+%\bibitem[Smith et~al.(2009)Smith, Jones]{smith02}
+%P. Q. Smith, and X. Y. Jones. ...reference text...
+%\end{thebibliography}
+
+
 \end{document}
+
+%                       Revision History
+%                       -------- -------
+%  Date         Person  Ver.    Change
+%  ----         ------  ----    ------
+
+%  2013.06.29   TU      0.1--4  comments on permission/copyright notices
+
