--- a/Tex/src/algorithm.tex
+++ b/Tex/src/algorithm.tex
@@ -1,18 +1,15 @@
 \section{\ldots}
 %The main idea: 
-We address the problem of adding an 
+We address the problem of introducing 
 optimism to a pessimistic locking protocol. 
-Given a sequential implementation and some pessimistic
-locking protocol, that performs store steps 
-only to locked objects,
-we add optimistic synchronization. 
+Given an implementation using a 
+pessimistic locking protocol, performing load and store steps 
+on locked objects only, we add optimistic synchronization. 
 The idea of optimistic synchronization is to load 
 shared variables without locks and start using the 
 locking protocol only when the operation reaches a store step.
-In practice our algorithm shows that there is no need to 
+Our algorithm shows that it is redundant to 
 acquire locks if they are freed before any change is made.    
-%In order to implement such synchronization scheme, 
-%we divide the operation to three \emph{phases}:
 
 This optimistic scheme separates the operation to three
 \emph{phases}, an optimistic \emph{read phase},
@@ -20,7 +17,7 @@ a pessimistic \emph{read-write phase} and a
 \emph{validation phase} that connect them. 
 
 \subsection{Detailed Algorithm}
-Each objects maintains a counter, incremented every time the 
+Each object maintains a counter, incremented every time the 
 object is locked. This counter is used to validate the correctness
 of the optimistic read phase. 
 
@@ -38,8 +35,11 @@ of the optimistic read phase.
   If the operation reaches the timeout, 
   a \readSet validation takes place, if it fails 
   the operation restarts from the beginning.
-  A pseudo code of the transformation can be found in 
-  Figure \ref{figure:readPhaseTransformation}. 
+  The use of timeout does not guarantee that the 
+  operation reads a consistent snapshot of the memory, 
+  thus, \ldots 
+  %A pseudo code of the transformation can be found in 
+  %Figure \ref{figure:readPhaseTransformation}. 
   
   \item[Validation Phase] This phase connects the read phase
   with the read-write phase. It has two requirements: (i) lock 
@@ -53,8 +53,8 @@ of the optimistic read phase.
   beginning. During the \readSet validation, each reference saved 
   in the \readSet is checked to be unlocked and that the current 
   version matches the version saved in the \readSet. 
-  A pseudo code of the \readSet validation can be found in
-  Figure \ref{figure:readSetValidation}.
+  %A pseudo code of the \readSet validation can be found in
+  %Figure \ref{figure:readSetValidation}.
   
   \item[Read-Write Phase] This phase enforces the locking protocol
   while maintaining the local versions, i.e., the local version of 
@@ -63,9 +63,9 @@ of the optimistic read phase.
   finish without restarts.  
 \end{description}
 
-The use of timeout does not guarantee
-\emph{opacity}~\cite{GuerraouiK2008} or 
-\emph{validity}\cite{LevAriCK2014}. 
+%The use of timeout does not guarantee
+%\emph{opacity}~\cite{GuerraouiK2008} or 
+%\emph{validity}\cite{LevAriCK2014}. 
 
 %The \readSet validation first checks that the node is unlocked,
 %(or locked by the current operation), then it checks that the 
@@ -78,9 +78,7 @@ The use of timeout does not guarantee
 	\begin{subfigure}{.35\textwidth}
 		\begin{algorithmic}[1]{}
 			\Function{foo}{\ldots} \label{code:begin}
-			\Statex \ldots
 			\State x = ptrExp \label{code:readRef}
-			\Statex \ldots
 			\EndFunction
 		\end{algorithmic}
 	\end{subfigure}
